goods添加了图片上传到七牛云

--- a/.env
+++ b/.env
@@ -31,3 +31,7 @@ MAIL_ENCRYPTION=null
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
+
+ak=2vVR188I0Vjk_n4pPj8H2bE-kj8EB-nccZmyGGCy
+sk=9KI-gECh77on2yGqT7D5wHfi00XdjxGiyq-JJEwk
+bt=ctshop
