--- a/.env
+++ b/.env
@@ -6,11 +6,11 @@ APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=118.25.91.140
 DB_PORT=3306
 DB_DATABASE=shop
 DB_USERNAME=root
-DB_PASSWORD=root
+DB_PASSWORD=Kk150...
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
